--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bili-cli"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -27,3 +27,4 @@ bytes = "*"
 futures = "0.3.21"
 dialoguer = "0.9.0"
 itertools = "0.10.3"
+qr2term = "0.3.0"
