--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,3 +29,10 @@ dialoguer = "0.10.2"
 itertools = "0.10.5"
 qr2term = "0.3.1"
 once_cell = "1.16.0"
+rsmpeg = { optional = true, version = "0.12" }
+
+[features]
+default = ["ffmpeg_api"]
+ffmpeg_api = [
+    "dep:rsmpeg"
+]
