--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,3 +36,7 @@ default = []
 ffmpeg_api = [
     "dep:rsmpeg"
 ]
+
+[target.'cfg(target_os = "android")'.dependencies]
+openssl = { version = "0.10", features = ["vendored"] }
+
